--- a/www/sites/artists.html
+++ b/www/sites/artists.html
@@ -296,7 +296,7 @@
             </a>
             </div>
             <div class="row artist_text"><a href="djs/rand.html" style="color: #ffffff">
-                <div class="col-xs-2 artist_container"><img src="../img/djs_head/ran_d.jpg" class="artist_img"/></div>
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/ran_d.jp class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Ran - D<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
