--- a/www/sites/djs/tiesto.html
+++ b/www/sites/djs/tiesto.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head lang="en">
     <meta charset="utf-8">
     <meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
+
     <!-- Bootstrap init -->
+
     <script src="../../js/jquery-1.11.2.min.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
     <script src="phonegap.js"></script>
+
     <!-- Styles init -->
     <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/bootstrap-theme.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../../css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/normalize.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/styles.css" type="text/css"/>
 
@@ -18,53 +20,76 @@
 
     <title>Electric Love Festival</title>
 
+    <style>
+        html, body {
+            height: 100%;
+        [orient="portrait"]
+
+        }
+        @viewport {
+            orientation: portrait;
+        }
+    </style>
 </head>
 
-<body>
-
-<div id="everything" class="content-info">
-
-    <a href="" class="js">
-        <div class="header_div" onclick="history.go(-1);return true;">
-            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
+<body style="color: white; ">
+<div id="header">
+    <a href="../artists.html" style="text-decoration: none">
+        <div class="header_fixed" style="top: 5px; left: 5px;">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
         </div>
     </a>
-
-    <div><img src="../../img/djs_head/tiesto_main.jpg" class="img-responsive"></div>
-    <div class="artist_social">
+</div>
+<div style="top: 50px; position: fixed; z-index: 2;">
+    <img src="../../img/djs_slider/tiesto__slider.jpg" style="height: 150px;">
+</div>
+<div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
+<div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
         <span><a href="http://tiesto.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
-            onmouseover="this.src='../../img/social/home_hover.gif'"
-            onmouseout="this.src='../../img/social/home.gif'"/></a>
+                                                onmouseover="this.src='../../img/social/home_hover.gif'"
+                                                onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
+
         <span><a href="https://www.facebook.com/tiesto"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
-            onmouseover="this.src='../../img/social/facebook_hover.gif'"
-            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+                                                             onmouseover="this.src='../../img/social/facebook_hover.gif'"
+                                                             onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
+
+
        <span><a href="https://soundcloud.com/tiesto"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
-            onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
-            onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+                                                          onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+                                                          onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
         <span><a href="https://www.youtube.com/user/officialtiesto"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
-            onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
-            onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+                                                                         onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+                                                                         onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
-    </div>
-    <div class="artist_home">Tiesto ist ein niederländischer DJ und Musikproduzent und sein großer Durchbruch
-        kam im Jahr 2000 mit dem Remix von Deleriums Silence. 2001 kam sein Debütalbum In My Memory
-        auf den Markt. Das Album war ein großer Erfolg, auch in den USA.
-        2002 wurde er erstmals von den Lesern des britischen Magazins DJ Mag zum
-        besten DJ der Welt gewählt. 2003 und 2004 verteidigt er seinen ersten Platz.
-        Im Jahre 2003 war er mit Tiesto In Concert der erste DJ, der allein in einem Stadion
-        (Gelredome in Arnheim, Niederlande) vor 25.000 Zuschauern auflegte.
-        2004 begleitete er bei den Olympischen Sommerspielen in Athen den Einmarsch der
-        Athleten ins Stadion. Zudem veranstaltete er Tiesto In Concert 2, wo er vor 70.000
-        Fans eine gewaltige Show ablieferte. Ebenfalls 2004 ehrte Königin Beatrix ihn wegen seiner
-        Verdienste um die niederländische Dance-Szene mit der Verleihung des Ordens von Oranien-Nassau im Range eines Offiziers.
-        2010 startete er außerdem sein eigenes Label Musical Freedom, nachdem sich sein Musikstil von Trance eher zu Elektro-House entwickelte.
-        Er gehört zu den bestverdienenden DJs der Welt mit einem Jahreseinkommen von 22 Millionen Dollar. Derzeit belegt Tiesto Platz 5 der DJ Mag Top 100.
-        2014 remixte er die Ballade All of Me des US-amerikanischen R&B-Sängers John Legend. Zu seinen absolut größten Hits Just
-        Be und Adagio for Strings gesellen sich ebenfalls 2014 mit Wasted und Red Light zwei weitere Tracks zu seinen zahlreichen Top Hits. </div>
+
+</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+
+<div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
+    Tiesto ist ein niederländischer DJ und Musikproduzent und sein großer Durchbruch
+    kam im Jahr 2000 mit dem Remix von Deleriums Silence. 2001 kam sein Debütalbum
+    In My Memory auf den Markt. Das Album war ein großer Erfolg, auch in den USA.
+    2002 wurde er erstmals von den Lesern des britischen Magazins DJ Mag zum besten
+    DJ der Welt gewählt. 2003 und 2004 verteidigt er seinen ersten Platz. Im Jahre
+    2003 war er mit Tiesto In Concert der erste DJ, der allein in einem Stadion
+    (Gelredome in Arnheim, Niederlande) vor 25.000 Zuschauern auflegte.
+    2004 begleitete er bei den Olympischen Sommerspielen in Athen den Einmarsch
+    der Athleten ins Stadion. Zudem veranstaltete er Tiesto In Concert 2, wo er vor
+    70.000 Fans eine gewaltige Show ablieferte.
+    Ebenfalls 2004 ehrte Königin Beatrix ihn wegen seiner Verdienste um die
+    niederländische Dance-Szene mit der Verleihung des Ordens von Oranien-Nassau
+    im Range eines Offiziers. 2010 startete er außerdem sein eigenes Label
+    Musical Freedom, nachdem sich sein Musikstil von Trance eher zu Elektro-House entwickelte.
+    Er gehört zu den bestverdienenden DJs der Welt mit einem Jahreseinkommen
+    von 22 Millionen Dollar. Derzeit belegt Tiesto Platz 5 der DJ Mag Top 100.
+    2014 remixte er die Ballade All of Me des US-amerikanischen R&B-Sängers John
+    Legend. Zu seinen absolut größten Hits Just Be und Adagio for Stringsgesellen
+    sich ebenfalls 2014 mit Wasted und Red Light zwei weitere Tracks zu seinen zahlreichen Top Hits.
+
+</div>
 
 </body>
-
 </html>
