--- a/www/sites/djs/toneshifterz.html
+++ b/www/sites/djs/toneshifterz.html
@@ -41,56 +41,45 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/slider_zedd__slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/toneshifterz__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.zedd.net"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.toneshifterz.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/Zedd"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href="http://www.facebook.com/Toneshifterz"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
 
-       <span><a href="https://soundcloud.com/zedd"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+       <span><a href="https://soundcloud.com/toneshifterzofficial"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
                                                         onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
                                                         onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
-
-        <span>
-            <a href="https://twitter.com/zedd"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
-                                                    onmouseover="this.src='../../img/social/twitter_hover.gif'"
-                                                    onmouseout="this.src='../../img/social/twitter.gif'"/></a>
+        <span><a href="https://www.youtube.com/user/Toneshifterz"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+                                                                 onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+                                                                 onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
+
 </div>
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Zedd ist ein russisch-deutscher Musikproduzent und DJ des Electro House und
-    Dubstep. Den größten Erfolg hatte er bisher 2014 mit seiner Single Clarity, die die
-    Top Ten der US-Charts erreichte und mit einem Grammy ausgezeichnet wurde.
-    Für den Soundtrack zum Film „Die Unfassbaren“ steuerte er den Song Codecaus
-    seinem Album Claritybei.
-    2013 erreichte er mit Stay the Night, das er mit der US-amerikanischen Sängerin
-    Hayley Williams aufnahm, die Charts sämtlicher Länder. In Australien wurde das
-    Duo mit Platin ausgezeichnet.
-    2014 veröffentlichte Zedd gemeinsam mit Matthew Koma und der schwedischen
-    Soul-Pop-Sängerin Miriam Bryant das Lied Find You, das als Titelsong für den Film
-    „Divergent” verwendet wurde.
-    Zedd ist neben seiner Solokarriere insbesondere als Remixer aktiv. Erfolgreich
-    waren besonders seine Remixe für Lady Gagas Born This Way, Skrillex’ Scary
-    Monsters and Nice Spritesund The Time (Dirty Bit)von den Black Eyed Peas.
-    Er produzierte, schrieb und komponierte Lieder für Sänger wie Justin Bieber, Nicki
-    Minaj, Lady Gaga oder Eva Simons. Zudem begleitete er Lady Gaga als DJ auf ihren
-    Live-Touren und trat in Asien als Vorband in Lady Gagas The Born This Way Ball
-    Tourauf.
-    Aktuell ist Zedd mit der US-amerikanischen Sängerin und Schauspielerin Selena
-    Gomez liiert. Aktuell erschien am 24.2.2015 ihr gemeinsamer Track I Want You To
-    Know.
+    Toneshifterz gilt als Botschafter der australischen Harddance-Szene und er ist auf
+    den größten Hardstyle Events der Welt, wie dem Defqon.1 Festival Australia, IQON,
+    Decibel Outdoor Festival und Hardbass, vertreten.
+    2009 begann seine Karriere als Duo (Elie Abwi und Olcay Ertek) mit Hits wie Jaydee
+    und Empire Of The Sun. 2011 veröffentlichten Toneshifterz ihr Debut-Album Till
+    Daybreak Meets. Es folgte die Produktion der offiziellen Defqon.1 Hymne
+    Psychedelic Wasteland.
+    2013 wechselte Toneshifterz zu Brennan Heart´s Label We Rund veröffentlichte die
+    erfolgreichen Singles Last Night(feat. Chris Madin) und Parachutes.
+    Ebenfalls 2013 trennte sich das Duo und Elie Abwi setzt das Projekt Toneshifterz
+    seitdem allein fort.
 </div>
 
 </body>
