--- a/www/sites/djs/wasted.html
+++ b/www/sites/djs/wasted.html
@@ -41,56 +41,45 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/slider_zedd__slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/wasted_penguinz__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.zedd.net"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.wastedpenguinz.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/Zedd"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href="https://www.facebook.com/WastedPenguinz"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
 
-       <span><a href="https://soundcloud.com/zedd"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+       <span><a href="https://soundcloud.com/wasted-penguinz"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
                                                         onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
                                                         onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
-
-        <span>
-            <a href="https://twitter.com/zedd"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
-                                                    onmouseover="this.src='../../img/social/twitter_hover.gif'"
-                                                    onmouseout="this.src='../../img/social/twitter.gif'"/></a>
+        <span><a href="https://www.youtube.com/user/PenguinzMedia"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+                                                                 onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+                                                                 onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
+
 </div>
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Zedd ist ein russisch-deutscher Musikproduzent und DJ des Electro House und
-    Dubstep. Den größten Erfolg hatte er bisher 2014 mit seiner Single Clarity, die die
-    Top Ten der US-Charts erreichte und mit einem Grammy ausgezeichnet wurde.
-    Für den Soundtrack zum Film „Die Unfassbaren“ steuerte er den Song Codecaus
-    seinem Album Claritybei.
-    2013 erreichte er mit Stay the Night, das er mit der US-amerikanischen Sängerin
-    Hayley Williams aufnahm, die Charts sämtlicher Länder. In Australien wurde das
-    Duo mit Platin ausgezeichnet.
-    2014 veröffentlichte Zedd gemeinsam mit Matthew Koma und der schwedischen
-    Soul-Pop-Sängerin Miriam Bryant das Lied Find You, das als Titelsong für den Film
-    „Divergent” verwendet wurde.
-    Zedd ist neben seiner Solokarriere insbesondere als Remixer aktiv. Erfolgreich
-    waren besonders seine Remixe für Lady Gagas Born This Way, Skrillex’ Scary
-    Monsters and Nice Spritesund The Time (Dirty Bit)von den Black Eyed Peas.
-    Er produzierte, schrieb und komponierte Lieder für Sänger wie Justin Bieber, Nicki
-    Minaj, Lady Gaga oder Eva Simons. Zudem begleitete er Lady Gaga als DJ auf ihren
-    Live-Touren und trat in Asien als Vorband in Lady Gagas The Born This Way Ball
-    Tourauf.
-    Aktuell ist Zedd mit der US-amerikanischen Sängerin und Schauspielerin Selena
-    Gomez liiert. Aktuell erschien am 24.2.2015 ihr gemeinsamer Track I Want You To
-    Know.
+    Wasted Penguinz sind ein Hardstyle Duo aus Schweden. Ihre Zusammenarbeit
+    begann 2008. 2 Jahre nach ihrer Gründung unterzeichneten sie einen Vertrag mit
+    dem Label Scantraxx und es erschienen die Tracks I´m Free, Anxiety, Hate Mondayz
+    und Resistance.
+    Mit allen Titeln erreichten sie die Hardstyle Top 100 2010-Liste von Fear.fm – dem
+    größten Hardstyle Radio-Sender. Zudem gewannen sie die Auszeichnung Best New
+    Facevon Fear.fm.
+    2011 bespielten sie die Bühnen von Defqon. 1, Q-Base und dem Intents Festival.
+    Seit 2013 stehen Wasted Penguinz bei Toff Music unter Vertrag und veröffentlichten
+    den Track Raindropzund ihr erstes Album Wistfulness.
+    Im Jahr 2014 remixte das Duo JoeySuki und Kill The Buzz´s Single Life Is Calling.
 </div>
 
 </body>
