--- a/www/sites/djs/vicetone.html
+++ b/www/sites/djs/vicetone.html
@@ -41,56 +41,44 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/slider_zedd__slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/vicetone-2__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.zedd.net"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.vicetone.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/Zedd"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href="https://www.facebook.com/VicetoneOfficial"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
 
-       <span><a href="https://soundcloud.com/zedd"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+       <span><a href="https://soundcloud.com/vicetone"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
                                                         onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
                                                         onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
-
-        <span>
-            <a href="https://twitter.com/zedd"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
-                                                    onmouseover="this.src='../../img/social/twitter_hover.gif'"
-                                                    onmouseout="this.src='../../img/social/twitter.gif'"/></a>
+        <span><a href="https://www.youtube.com/user/vicetoneofficial"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+                                                                 onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+                                                                 onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
+
 </div>
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Zedd ist ein russisch-deutscher Musikproduzent und DJ des Electro House und
-    Dubstep. Den größten Erfolg hatte er bisher 2014 mit seiner Single Clarity, die die
-    Top Ten der US-Charts erreichte und mit einem Grammy ausgezeichnet wurde.
-    Für den Soundtrack zum Film „Die Unfassbaren“ steuerte er den Song Codecaus
-    seinem Album Claritybei.
-    2013 erreichte er mit Stay the Night, das er mit der US-amerikanischen Sängerin
-    Hayley Williams aufnahm, die Charts sämtlicher Länder. In Australien wurde das
-    Duo mit Platin ausgezeichnet.
-    2014 veröffentlichte Zedd gemeinsam mit Matthew Koma und der schwedischen
-    Soul-Pop-Sängerin Miriam Bryant das Lied Find You, das als Titelsong für den Film
-    „Divergent” verwendet wurde.
-    Zedd ist neben seiner Solokarriere insbesondere als Remixer aktiv. Erfolgreich
-    waren besonders seine Remixe für Lady Gagas Born This Way, Skrillex’ Scary
-    Monsters and Nice Spritesund The Time (Dirty Bit)von den Black Eyed Peas.
-    Er produzierte, schrieb und komponierte Lieder für Sänger wie Justin Bieber, Nicki
-    Minaj, Lady Gaga oder Eva Simons. Zudem begleitete er Lady Gaga als DJ auf ihren
-    Live-Touren und trat in Asien als Vorband in Lady Gagas The Born This Way Ball
-    Tourauf.
-    Aktuell ist Zedd mit der US-amerikanischen Sängerin und Schauspielerin Selena
-    Gomez liiert. Aktuell erschien am 24.2.2015 ihr gemeinsamer Track I Want You To
-    Know.
+    Das niederländische DJ-Duo Vicetone zählt zu den senkrecht Startern der EDM
+    Szene. Ihre Zusammenarbeit begann 2012 und bereits wenig später spielten sie auf
+    Festivals wie dem Electric Love, Ultra und TomorrowWorld. Sie wurden unter
+    anderem durch ihren Song Hopebekannt, den sie aus einer Rede von Barack Obama
+    bastelten.
+    Bekanntheit erlangte das Duo auch durch die Zusammenarbeit mit Nicky Romero
+    und Let Me Feel.
+    Derzeit belegt Vicetone Platz 36 der DJ Mag Top 100.
+    Vicetone waren bereits 2013 im Line Up des Electric Love zu finden und werden
+    2015 zum 2. Mal ihr DJ-Talent auf der Mainstage unter Beweis stellen.
 </div>
 
 </body>
