--- a/www/sites/djs/watermat.html
+++ b/www/sites/djs/watermat.html
@@ -41,51 +41,37 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/slider_steve_aoki__slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/watermaet__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://steveaoki.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
-                                                 onmouseover="this.src='../../img/social/home_hover.gif'"
-                                                 onmouseout="this.src='../../img/social/home.gif'"/></a>
-        </span>
 
-        <span><a href="https://www.facebook.com/Steve.Aoki"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+
+        <span><a href="https://www.facebook.com/WatermatMusic"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
 
-       <span><a href="https://soundcloud.com/steveaoki"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+       <span><a href="https://soundcloud.com/watermat"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
                                                         onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
                                                         onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
-        <span><a href="https://www.youtube.com/user/steveaokiofficial"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+        <span><a href="https://www.youtube.com/user/watermatmusic"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
                                                                  onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
                                                                  onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
-        <span>
-            <a href="https://twitter.com/steveaoki"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
-                                                    onmouseover="this.src='../../img/social/twitter_hover.gif'"
-                                                    onmouseout="this.src='../../img/social/twitter.gif'"/></a>
-        </span>
+
 </div>
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Steve Aoki stammt aus den USA und hat sich dem Genre Electro/Indie verschrieben.
-    Bereits in seiner Zeit an der University of California gründete er sein eigenes
-    Plattenlabel DIM MAK Records. Aokis Debütalbum Pillowface and His Airplane
-    Chronicleserschien 2008.
-    Steve Aoki remixte viele Musiker und Bands, darunter Michael Jackson, Duran Duran,
-    Drake, Lenny Kravitz, Bloc Party, Snoop Dogg, Peaches, Kid Cudi oder Robin Thicke.
-    Aoki gehört nach der Forbes-Liste 2013 zu den bestbezahlten DJs der Welt und belegt
-    mit $23 Millionen Platz 5.
-    Steve Aoki ist in der EDM-Szene besonders durch seine Liveshows bekannt. Das
-    Publikum mit Torten zu bewerfen oder Champagnerduschen sind sein Markenzeichen.
-    2014 erschien sein aktuelles Album Neon Future I, unter anderem mit Delirious, Rage
-    the Night Away, Free the Madness, Back to Earth, Born to Get Wildund Afroki.
-    Derzeit belegt Steve Aoki Platz 10 der DJ MAG Top 100.
+    Laurent Arriau alias Watermät, ist ein französischer DJ und Produzent.
+    Seine ersten Tracks Sparks und Something About U erschienen im Dezember 2013.
+    2014 schaffte er es mit seiner Single Bullit in die Charts in Belgien,
+    Frankreich, Niederlande, Australien und Großbritannien. Bullit wurde schon
+    von den großen DJ ́s der Szene supported und war ein großer Hit bei der WMC in Miami.
+
 </div>
 
 </body>
