--- a/www/sites/djs/ww.html
+++ b/www/sites/djs/ww.html
@@ -41,28 +41,25 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/slider_zedd__slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/w__w__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.zedd.net"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.WandWmusic.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/Zedd"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
-                                                             onmouseover="this.src='../../img/social/facebook_hover.gif'"
-                                                             onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
-        </span>
-
-
-       <span><a href="https://soundcloud.com/zedd"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+       <span><a href="https://soundcloud.com/wandw"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
                                                         onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
                                                         onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
-
+        <span><a href="http://www.youtube.com/wandwmusic"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+                                                                 onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+                                                                 onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+        </span>
         <span>
-            <a href="https://twitter.com/zedd"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
+            <a href="http://www.twitter.com/wandwmusic"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
                                                     onmouseover="this.src='../../img/social/twitter_hover.gif'"
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
@@ -70,27 +67,22 @@
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Zedd ist ein russisch-deutscher Musikproduzent und DJ des Electro House und
-    Dubstep. Den größten Erfolg hatte er bisher 2014 mit seiner Single Clarity, die die
-    Top Ten der US-Charts erreichte und mit einem Grammy ausgezeichnet wurde.
-    Für den Soundtrack zum Film „Die Unfassbaren“ steuerte er den Song Codecaus
-    seinem Album Claritybei.
-    2013 erreichte er mit Stay the Night, das er mit der US-amerikanischen Sängerin
-    Hayley Williams aufnahm, die Charts sämtlicher Länder. In Australien wurde das
-    Duo mit Platin ausgezeichnet.
-    2014 veröffentlichte Zedd gemeinsam mit Matthew Koma und der schwedischen
-    Soul-Pop-Sängerin Miriam Bryant das Lied Find You, das als Titelsong für den Film
-    „Divergent” verwendet wurde.
-    Zedd ist neben seiner Solokarriere insbesondere als Remixer aktiv. Erfolgreich
-    waren besonders seine Remixe für Lady Gagas Born This Way, Skrillex’ Scary
-    Monsters and Nice Spritesund The Time (Dirty Bit)von den Black Eyed Peas.
-    Er produzierte, schrieb und komponierte Lieder für Sänger wie Justin Bieber, Nicki
-    Minaj, Lady Gaga oder Eva Simons. Zudem begleitete er Lady Gaga als DJ auf ihren
-    Live-Touren und trat in Asien als Vorband in Lady Gagas The Born This Way Ball
-    Tourauf.
-    Aktuell ist Zedd mit der US-amerikanischen Sängerin und Schauspielerin Selena
-    Gomez liiert. Aktuell erschien am 24.2.2015 ihr gemeinsamer Track I Want You To
-    Know.
+    W&W ist ein niederländisches Trance-Duo, bestehend aus Willem van Hanegem und
+    Wardt van der Harst – auch bekannt unter seinem Solo-Pseudonym Re-Ward. Ihr
+    erster großer Erfolg war Mustangim Jahr 2007. Willem ist der Sohn des
+    gleichnamigen Fußballspielers Willem van Hanegem.
+    Ihre Karriere begann beim Trance Energy-Festival 2007 in den Niederlanden. Ihr
+    bislang größter Hit The Codewurde von den Großen der Szene supported und
+    erschien bei Hardwell´s Label Revealed.
+    2014 erreichten W&W mit dem Track Bigfooterstmals die Charts in Deutschland
+    und Österreich. Die jungen Niederländer sind beim EDC in Las Vegas, beim Ultra
+    Music Festival in Miami und beim Tomorrowland in Belgien auf der Mainstage
+    vertreten. Derzeit belegt das Duo Platz 18 der DJ Mag Top 100.
+    W&W war bereits bei der Electric Love Premiere 2013 gebucht, wegen Krankheit
+    konnte jedoch nur Wardt van der Harst spielen, jedoch lieferte er sich darauf
+    zusammen mit seinen holländischen DJ-Kollegen Showtek, Chuckie und Dyro ein
+    unvergessliches b2b2b2b-Set, nachdem Chuckie seinen USB-Stick im Hotel in
+    München vergessen hatte.
 </div>
 
 </body>
