--- a/www/sites/djs/axwell.html
+++ b/www/sites/djs/axwell.html
@@ -61,7 +61,7 @@
                                                           onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage 00:00 - 01:00</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Axwell und Ingrosso sind ein schwedisches EDM-Duo, welches der Swedish House
