--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -17,7 +17,7 @@
     <a href="../index.html" style="text-decoration: none">
         <div class="row header_fixed" style="top: 0; left: -5px; height: 45px">
             <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 10px -70px 0 10px; "/>
-            <em class="header_text" style="line-height: 50px">Artists</em>
+            <em class="header_text" style="line-height: 50px">Map</em>
         </div>
     </a>
 
