--- a/www/sites/djs/audiofreq.html
+++ b/www/sites/djs/audiofreq.html
@@ -70,7 +70,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance 14:00 - 15:00</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Audiofreq, besser bekannt als Bioweapon oder Sam Gonzalez, ist ein australischer
