--- a/www/sites/djs/bass_modulators.html
+++ b/www/sites/djs/bass_modulators.html
@@ -65,7 +65,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance 16:00 - 17:30</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Die Zusammenarbeit von Rick Buijtenhek und Roland Evers, alias Bass Modulators,
