--- a/www/sites/djs/brennan.html
+++ b/www/sites/djs/brennan.html
@@ -61,7 +61,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance 20:30 - 22:00</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Fabian Bohn alias Brennan Heart ist ein 31 jähriger DJ und Produzent aus den
